--- a/simulador.html
+++ b/simulador.html
@@ -20,7 +20,7 @@
                     <div class="perfil-menu">
                         <img src="assets/IMG/perfil.png" alt="Perfil" class="icone-perfil" id="icone-perfil" />
                         <div class="dropdown" id="dropdown-menu">
-                            <a href="index.html">Sair</a>
+                            <a href="login.html">Sair</a>
                         </div>
                     </div>
                 </nav>
